jenkins/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: jenkins
  name: jenkins
  labels: 
    app: jenkins
    purpose: devops
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector: 
    matchLabels:
      app: jenkins
  template:
    metadata:
       name: jenkins-app-pod
       labels: 
          app: jenkins
          purpose: devops
    spec:
      securityContext:
        #runAsNonRoot: true
       # runAsUser: 0
        fsGroup: 1000
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      containers:
      -  image: jenkinsci/blueocean:1.25.2
         imagePullPolicy: IfNotPresent
         name: jenkins-container
         workingDir: /var/jenkins_home
         securityContext:
           runAsUser: 0
         resources:
          requests:
           cpu: 1024m
           memory: 1.5Gi
          limits:
           cpu: 1024m
           memory: 1.5Gi
         ports:
         - name: jenkins-http 
           containerPort: 8080
           hostPort: 8080
         - name: jenkins-slave
           containerPort: 50000
           hostPort: 50000
         volumeMounts:
         - name: jenkins-data
           mountPath: "/var/jenkins_home"
      volumes:
      - name: jenkins-data
        persistentVolumeClaim: 
          claimName: jenkins-pvc
