jenkins/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: jenkins
  name: jenkins-svc
spec:
  clusterIP: 10.43.100.21
  selector:
    app: jenkins
  ports:
  - name: jenkins-webui
    targetPort: 8080
    port: 8080
    nodePort: 30230
  - name: jenkins-slave
    targetPort: jenkins-slave
    port: 50000
    #nodePort: 31096
  type: NodePort
