jenkins/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: jenkins
  name: jenkins-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jenkins-svc
            port:
              number: 8080
    host: jenkins.cicd.com
